Added "Not run" to documentation

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Changes from Version 0.4-1 to 0.4-2 [September 10 2014] 
+* Added "Not run" to documentation
+
 Changes from Version 0.4 to 0.4-1 [September 09 2014] 
 * Improved documentation
 * Improved some examples
