--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Changes from Version 0.4-2 to 0.5 [September 15 2014] 
+* Added function selectFData
+* RDML function code optimization
+* %TUBE% corrected for Light Cycler 96
+
 Changes from Version 0.4-1 to 0.4-2 [September 10 2014] 
 * Added "Not run" to documentation
 
