--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Changes from Version 0.6-1 to 0.7-1 [September 23 2014]
+* Added plot S3
+* RDML rewrited as R6 object
+
 Changes from Version 0.6 to 0.6-1 [September 23 2014] 
 * flat.table option removed from RDML function
 
