--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Changes from Version 0.8-4 to 0.9-1 [July 08 2015]
+* now all RDML types are R6 classes
+
 Changes from Version 0.8-3 to 0.8-4 [April 19 2015]
 * progress bar disabled at non interactive mode
 * conditions and quantities moved to sample attributes
