--- a/vignettes/RDML.Rmd
+++ b/vignettes/RDML.Rmd
@@ -13,9 +13,9 @@ knitr::opts_chunk$set(collapse = T, comment = "#>")
 library(RDML)
 ```
 
-Package **RDML** is created to work with Real-time PCR Data Markup Language (RDML) -- a structured and universal data standard for exchanging quantitative PCR (qPCR) data. RDML belongs to the family of eXtensible Markup Languages (XML).  It contains fluorescence data and information about qPCR experiment overall. Description and schema of RDML format can be found at http://rdml.org. 
+The **RDML** package is created to work with the Real-time PCR Data Markup Language (RDML) -- a structured and universal data standard for exchanging quantitative PCR (qPCR) data. RDML belongs to the family of eXtensible Markup Languages (XML). It contains fluorescence data and information about the qPCR experiment. A description and the schema of RDML format are available at http://rdml.org.
 
-Structure of **RDML** package mimics RDML format and provides several [R6](http://cran.r-project.org/web/packages/R6/vignettes/Introduction.html) classes which corresponds to [RDML v1.2](http://rdml.org/files.php?v=1.2) format types . All major manipulations with RDML data can be done by class called **RDML** throught its public methods:
+The structure of the **RDML** package mimics the RDML format and provides several [R6](http://cran.r-project.org/web/packages/R6/vignettes/Introduction.html) classes, which corresponds to [RDML v1.2](http://rdml.org/files.php?v=1.2) format types. All major manipulations with RDML data can be done by a class called **RDML** through its public methods:
 
 - `$new()` -- creates new **RDML** object (empty or from specified RDML file) 
 - `$AsTable()` -- represents data contained in **RDML** object (except fluorescent data) as data.frame.
@@ -37,7 +37,7 @@ Next we can check structure of our new object -- `lc96` by printing it.
 ```{r}
 lc96
 ```
-As a result we can see fields names and after `:` :
+As a result we can see field names and after `:` :
 
 - names of the `R6` objects contained at this field after `~`,
 - contained values after `:`,
@@ -53,8 +53,8 @@ For the base class **RDML** they are:
 - `dateUpdated`
 - `id` -- publisher and id to the RDML file.
 - `experimenter` -- contact details of the experimenter.
-- `documentation` -- these elements should be used if the same description applies to many samples, targets or experiments.
-- `dye` -- information on a dyes.
+- `documentation` -- these elements should be used if the same description applies to many samples, targets, or experiments.
+- `dye` -- information about a dye.
 - `sample` -- defined template solutions.
 - `target` -- defined PCR reactions.
 - `thermalCyclingConditions` -- cycling programs for PCR or to amplify cDNA.
@@ -64,7 +64,7 @@ These fields can be divided by two parts:
 
 ### Experiment field
 
-Contains one or more experiments with fluorescence data. Fluorescence data store at the *data* level of experiment. E.g., fluorescence data for reaction tube *45* and target *bACT* can be accessed with the next code:
+Contains one or more experiments with fluorescence data. Fluorescence data are stored at the *data* level of an experiment. E.g., fluorescence data for reaction tube *45* and target *bACT* can be accessed with the following code:
 ```{r}
 fdata <- 
   lc96$
@@ -80,11 +80,11 @@ Structure of experiments can be visualized by plotting dendrogram.
 lc96$AsDendrogram()
 ```
 
-At this dendrogram we can see that our file consists of one experiment with one run in it. Four targets, each with two sample types (*std* -- standard, *unkn* -- unknown). There is only qPCR data -- *adp*. Ten reacts (tubes) for standard type and six reacts for unknown type. Total number of reacts can be more than number of reacts on plate because one tube can contain several targets.
+In this dendrogram we can see that our file consists of one experiment and one run. Four targets, each with two sample types (*std* -- standard, *unkn* -- unknown), are part of the experiment. There is only qPCR data -- *adp* in this experiment. Ten reactions (tubes) for standard type (*std*) and six reaction for the unknown (*unkn*) type. The total number of reactions can be more than number of reactions on the plate because one tube can contain more than one target (e.g., multiplexing).
 
 ### Additional information fields
 
-All fields other other than **experiment**. This additional information can be referenced in other parts of file. E.g., to access sample added to react *39* and get its quantity we can use code like this:
+All fields other than **experiment**. This additional information can be referenced in other parts of the RDML file. E.g., to access sample added to react *39* and get its quantity we can use code like this:
 ```{r}
 ref <- lc96$
           experiment$`ca1eb225-ecea-4793-9804-87bfbb45f81d`$
@@ -97,7 +97,7 @@ sample$quantity$value
 
 ## Copying **RDML** objects
 
-**R6** objects are environments, that's why simple copying results in creating reference to existing object. Then modifing of copy leads to modification of original object. To create *real* copy of object we have to use method `$clone(deep = TRUE)` provided by **R6** class.
+**R6** objects are environments, that's why simple copying results in creating reference to existing object. Then modifying of copy leads to modification of original object. To create *real* copy of object we have to use method `$clone(deep = TRUE)` provided by **R6** class.
 
 ```{r}
 id1 <- idType$new("id_1")
@@ -111,7 +111,7 @@ cat(sprintf("Original object\t: %s ('id_1' bacame 'id_2')\nSimple copy\t\t: %s\n
 
 From example above we can see that modification of `id2` led to modification of original object `id1` but modification of cloned object `id3` didn't.
 
-## Modifing **RDML** objects
+## Modifying **RDML** objects
 
 To modify content of **RDML** objects we can use fields as setters. These setters provide type safe modification by input validation. In addition, setting lists of objects generates names of list elements.
 
@@ -143,7 +143,7 @@ lc96$AsDendrogram()
 
 ## `AsTable()` method
 
-To get information about all fluorescence data in RDML file (type of added sample, used target, starting quantity etc.) as data.frame we can use `$AsTable()` method. By default it provides such information as:
+To get information about all fluorescence data in RDML file (type of added sample, used target, starting quantity etc.) as data.frame we can use `$AsTable()` method. By default, it provides such information as:
 
 - `fdata.name` -- aggregated name for current fluorescence data. Default pattern is `position_sample_sample.type_target` (e.g., *D03\_Sample 39\_std\_bACT*). This pattern can be modified by `name.pattern` argument.
 - `exp.id` -- experiment id (e.g., *exp1*).
@@ -177,16 +177,16 @@ rownames(tab) <- NULL
 head(tab)
 ```
 
-Also generated data.frame is used as a query in `$GetFData()` and `$SetFData()` methods (see further sections).
+Also, the generated data.frame is used as a query in `$GetFData()` and `$SetFData()` methods (see further sections).
 
 ## Getting fluorescence data
 
-We can get fluorescence data two ways:
+We can get the fluorescence data two ways:
 
 - direct access to data as it was described at *Experiment field* subsection
 - using special method `$GetFData()`
 
-Advantage of `$GetFData()` is that it can combine fluorescence data from whole plate to one data.frame. Major argument of this function is `request` which defines fluorescence data to be got. This request is output from `$AsTable()` method and can be easely filtered by **dplyr** `filter()` function. Also limits of cycles, output `data.frame` format and data type (`fdata.type = 'adp'` for qPCR, `fdata.type = 'mdp'` for melting data) can by specified (see examples below).
+Advantage of `$GetFData()` is that it can combine fluorescence data from whole plate to one data.frame. Major argument of this function is `request`, which defines fluorescence data to be got. This request is output from `$AsTable()` method and can be filtered with ease by the **dplyr** `filter()` function. Also limits of cycles, output `data.frame` format and data type (`fdata.type = 'adp'` for qPCR, `fdata.type = 'mdp'` for melting data) can by specified (see examples below).
 
 ```{r, results = "hide", messages = FALSE, fig.width = 6, fig.height = 4}
 library(dplyr)
@@ -204,7 +204,7 @@ ggplot(fdata, aes(cyc, fluor)) +
                   color = target))
 ```
 
-As we can see from plot our curves are not background substructed. To do this we will use function `CPP()` from package [chipPCR](https://github.com/michbur/chipPCR).
+Our curves are not background subtrackted ass visible in the plot. To do this we use the `CPP()` function from the [chipPCR](https://github.com/michbur/chipPCR) package.
 
 ```{r}
 library(chipPCR)
@@ -227,14 +227,14 @@ fdata.cpp <- cbind(cyc = fdata[, 1],
                          function(x) CPP(fdata[, 1],
                                          x)$y))
 ```
-Now we have preprocessed data which we'll add to our object and use during next section.
+Now we have preprocessed data, which we will add to our object and use during next section.
 
 ## Setting fluorescence data
 
 To set fluorescence data to **RDML** object we can use `$SetFData()` method. It takes three arguments: 
 
 - `fdata` -- fluorescence data in `long.table = FALSE` format 
-- `request` -- output from `AsTable()` function which is used as path to set data;
+- `request` -- output from `AsTable()` function, which is used as path to set data;
 - `fdata.type` -- `fdata.type = 'adp'` for qPCR, `fdata.type = 'mdp'` for melting data.
 
 Next we will set preprocessed fluorescence data to the new run -- *run1_cpp*. Such subelements of RDML as *experiment*, *run*, *react* and *data* that do not exist at **RDML** object create by SetFData automaticaly (read more at *Creating **RDML** from table* section).
@@ -322,7 +322,7 @@ stepone$CalcCq()
 
 ## Creating **RDML** from table
 
-**RDML** objects can be generated not only from files but from user data contained in data.frames. To do this you have to create empty **RDML** object, create data.frame which describes data and set data by `$SetFData()` method. Minimal needed information (samples, targets, dyes) will be created from data description.
+**RDML** objects can be generated not only from files but from user data contained in data.frames. To do this you have to create empty **RDML** object, create data.frame, which describes data and set data by `$SetFData()` method. Minimal needed information (samples, targets, dyes) will be created from data description.
 
 ```{r, fig.width = 6, fig.height = 3, results = "hide"}
 ### Create simulated data with AmpSim() from chipPCR package
@@ -366,7 +366,7 @@ ggplot(fdata, aes(cyc, fluor)) +
 
 ## Functional style
 
-To provide functional programming style which is more convinient in **R** **RDML** class methods have function wrappers:
+To provide functional programming style, which is more convinient in **R** **RDML** class methods have function wrappers:
 
 - `obj$AsTable(...)` -- `AsTable(obj, ...)`
 - `obj$SetFData(...)` -- `SetFData(obj, ...)`
