--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -482,6 +482,25 @@ efficiency, Quantitative {PCR}},
   Urldate                  = {2014-04-08}
 }
 
+@Article{ruijter_amplification_2009,
+  Title                    = {Amplification efficiency: linking baseline and bias in the analysis of quantitative {PCR} data},
+  Author                   = {Ruijter, J M and Ramakers, C and Hoogaars, W M H and Karlen, Y and Bakker, O and van den Hoff, M J B and Moorman, A F M},
+  Journal                  = {Nucleic acids research},
+  Year                     = {2009},
+  Number                   = {6},
+  Pages                    = {e45},
+  Volume                   = {37},
+
+  Abstract                 = {Despite the central role of quantitative PCR (qPCR) in the quantification of mRNA transcripts, most analyses of qPCR data are still delegated to the software that comes with the qPCR apparatus. This is especially true for the handling of the fluorescence baseline. This article shows that baseline estimation errors are directly reflected in the observed PCR efficiency values and are thus propagated exponentially in the estimated starting concentrations as well as 'fold-difference' results. Because of the unknown origin and kinetics of the baseline fluorescence, the fluorescence values monitored in the initial cycles of the PCR reaction cannot be used to estimate a useful baseline value. An algorithm that estimates the baseline by reconstructing the log-linear phase downward from the early plateau phase of the PCR reaction was developed and shown to lead to very reproducible PCR efficiency values. PCR efficiency values were determined per sample by fitting a regression line to a subset of data points in the log-linear phase. The variability, as well as the bias, in qPCR results was significantly reduced when the mean of these PCR efficiencies per amplicon was used in the calculation of an estimate of the starting concentration per sample.},
+  Doi                      = {10.1093/nar/gkp045},
+  ISSN                     = {1362-4962},
+  Keywords                 = {Algorithms, Animals, Chick Embryo, Fluorescence, Linear Models, Reverse Transcriptase Polymerase Chain Reaction},
+  Language                 = {eng},
+  Pmcid                    = {PMC2665230},
+  Pmid                     = {19237396},
+  Shorttitle               = {Amplification efficiency}
+}
+
 @Article{spiess_impact_2014,
   Title                    = {Impact of Smoothing on Parameter Estimation in Quantitative {DNA} Amplification Experiments},
   Author                   = {Spiess, Andrej-Nikolai and Deutschmann, Claudia and Burdukiewicz, Micha\l{} and Himmelreich, Ralf and Klat, Katharina and Schierack, Peter and R\"{o}diger, Stefan},
@@ -580,36 +599,3 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Urldate                  = {2014-09-11}
 }
 
-@Article{untergasser_2007,
-  Title                    = {Primer3Plus, an enhanced web interface to Primer3},
-  Author                   = {Untergasser, Andreas and Nijveen, Harm and Rao, Xiangyu and Bisseling, Ton and Geurts, René and Leunissen, Jack A. M.},
-  Journal                  = {Nucleic Acids Research},
-  Year                     = {2007},
-  Number                   = {suppl 2},
-  Pages                    = {W71--W74},
-  Volume                   = {35},
-
-  Abstract                 = {Here we present Primer3Plus, a new web interface to the popular Primer3 primer design program as an enhanced alternative for the {CGI}- scripts that come with Primer3. Primer3 consists of a command line program and a web interface. The web interface is one large form showing all of the possible options. This makes the interface powerful, but at the same time confusing for occasional users. Primer3Plus provides an intuitive user interface using present-day web technologies and has been developed in close collaboration with molecular biologists and technicians regularly designing primers. It focuses on the task at hand, and hides detailed settings from the user until these are needed. We also added functionality to automate specific tasks like designing primers for cloning or step-wise sequencing. Settings and designed primer sequences can be stored locally for later use. Primer3Plus supports a range of common sequence formats, such as {FASTA}. Finally, primers selected by Primer3Plus can be sent to an order form, allowing tight integration into laboratory ordering systems. Moreover, the open architecture of Primer3Plus allows easy expansion or integration of external software packages. The Primer3Plus Perl source code is available under {GPL} license from {SourceForge}. Primer3Plus is available at http://www.bioinformatics.nl/primer3plus.},
-  Doi                      = {10.1093/nar/gkm306},
-  ISSN                     = {0305-1048, 1362-4962},
-  Pmid                     = {17485472},
-  Url                      = {http://nar.oxfordjournals.org/content/35/suppl_2/W71}
-}
-
-@article{ruijter_amplification_2009,
-	title = {Amplification efficiency: linking baseline and bias in the analysis of quantitative {PCR} data},
-	volume = {37},
-	issn = {1362-4962},
-	shorttitle = {Amplification efficiency},
-	doi = {10.1093/nar/gkp045},
-	abstract = {Despite the central role of quantitative PCR (qPCR) in the quantification of mRNA transcripts, most analyses of qPCR data are still delegated to the software that comes with the qPCR apparatus. This is especially true for the handling of the fluorescence baseline. This article shows that baseline estimation errors are directly reflected in the observed PCR efficiency values and are thus propagated exponentially in the estimated starting concentrations as well as 'fold-difference' results. Because of the unknown origin and kinetics of the baseline fluorescence, the fluorescence values monitored in the initial cycles of the PCR reaction cannot be used to estimate a useful baseline value. An algorithm that estimates the baseline by reconstructing the log-linear phase downward from the early plateau phase of the PCR reaction was developed and shown to lead to very reproducible PCR efficiency values. PCR efficiency values were determined per sample by fitting a regression line to a subset of data points in the log-linear phase. The variability, as well as the bias, in qPCR results was significantly reduced when the mean of these PCR efficiencies per amplicon was used in the calculation of an estimate of the starting concentration per sample.},
-	language = {eng},
-	number = {6},
-	journal = {Nucleic acids research},
-	author = {Ruijter, J M and Ramakers, C and Hoogaars, W M H and Karlen, Y and Bakker, O and van den Hoff, M J B and Moorman, A F M},
-	year = {2009},
-	pmid = {19237396},
-	pmcid = {PMC2665230},
-	keywords = {Algorithms, Animals, Chick Embryo, Fluorescence, Linear Models, Reverse Transcriptase Polymerase Chain Reaction},
-	pages = {e45}
-}
